Export original scores

--- a/Code/Scores.ipynb
+++ b/Code/Scores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "score.show()"
+    "#score.write(\"musicxml.pdf\", \"../Figures/beethoven-op67\", dpi=600)\n",
+    "print(score.parts[0].measureNumber)"
    ]
   },
   {
